# Projeto_FastApi

./: .coverage  Programas.code-workspace  iniciar_projeto.ps1  pyproject.toml  schemas.py
Projeto_FastApi/: README.md
fastapi_curso/: app.py
tests/: test_app.py
