[project]
name = "fastapi-curso"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Pereira",email = "gdnp@academico.ufpb.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]



[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']
[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "I",
    "W",
    "PL",
    "PT"] 

[tool.pytest.ini_options]
pythonpath = ["fastapi_curso"]
testpaths = ["tests"]
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
run = "fastapi dev fastapi_curso/app.py"
pre_test = "task lint"
test = "pytest -s -x --cov=fastapi_curso --cov-report=term-missing -vv"
post_test = "coverage html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
